--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1>Cash Flow</h1>
         <div class="action">
             <button id="add-list" onclick="input_bubble()">Add List</button>
-            <button id="clear-list" onclick="clear_table()">Clear</button>
+            <button id="clear-list">Clear</button>
         </div>
     </header>
     <main>
