--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header>
         <h1>Cash Flow</h1>
         <div class="action">
-            <button id="add-list" onclick="input_bubble()">Add List</button>
+            <button id="add-list">Add List</button>
             <button id="clear-list">Clear</button>
         </div>
     </header>
